force-app/main/default/objects/JSON_Generator__mdt/JSON_Generator__mdt.object-meta.xml
<CustomObject>
    <label>JSON Generator</label>
    <pluralLabel>JSONs Generator</pluralLabel>
</CustomObject>