force-app/main/default/objects/JSON_Generator__mdt/fields/Apex_Class_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_API_Name__c</fullName>
    <description>The class name which implements JSONGeneratorHandler.JSONPropertyInterface interface, to get the apex logic based driven value for JSON record.</description>
    <label>Apex Class API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>