force-app/main/default/objects/JSON_Generator__mdt/fields/Callout_Name__c.field-meta.xml
<CustomField>
    <fullName>Callout_Name__c</fullName>
    <description>The unique name of the callout has to be common for all the same callout JSON Generator records, System uses this value to get all the JSON Generator records</description>
    <label>Callout Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>