force-app/main/default/objects/JSON_Generator__mdt/fields/Is_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate the property has been disabled and will not be utilized by the framework.</description>
    <label>Is Disabled</label>
    <type>Checkbox</type>
</CustomField>