force-app/main/default/objects/JSON_Generator__mdt/fields/Is_Start__c.field-meta.xml
<CustomField>
    <fullName>Is_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates the starting point of the JSON Generator.</description>
    <label>Is Start</label>
    <type>Checkbox</type>
</CustomField>