force-app/main/default/objects/JSON_Generator__mdt/fields/Object_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Field_API_Name__c</fullName>
    <label>Object Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>