force-app/main/default/objects/JSON_Generator__mdt/fields/Parent_JSON_Generator__c.field-meta.xml
<CustomField>
    <fullName>Parent_JSON_Generator__c</fullName>
    <label>Parent JSON Generator</label>
    <length>40</length>
    <type>Text</type>
</CustomField>