force-app/main/default/objects/JSON_Generator__mdt/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>JSON object property name.</description>
    <label>Property Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>