force-app/main/default/objects/JSON_Generator__mdt/fields/Static_Value__c.field-meta.xml
<CustomField>
    <fullName>Static_Value__c</fullName>
    <description>If we want to setup the static value, rather than the object record drived value, this field should have data.</description>
    <label>Static Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>