force-app/main/default/objects/JSON_Generator__mdt/validationRules/sObject_Name_is_only_for_is_Start_true.validationRule-meta.xml
<ValidationRule>
    <fullName>sObject_Name_is_only_for_is_Start_true</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Is_Start__c,  ISBLANK( sObject_Name__c ) ,  NOT(ISBLANK( sObject_Name__c )) )</errorConditionFormula>
    <errorMessage>The sObject name should be populated only for is start true</errorMessage>
</ValidationRule>