force-app/main/default/objects/JSON_Generator__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>DeveloperName</columns>
    <columns>Callout_Name__c</columns>
    <columns>Is_Start__c</columns>
    <columns>Object_Field_API_Name__c</columns>
    <columns>Parent_JSON_Generator__c</columns>
    <columns>Property_Name__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Property_Type__c</columns>
    <columns>sObject_Name__c</columns>
    <columns>Static_Value__c</columns>
    <columns>Apex_Class_API_Name__c</columns>
    <columns>Is_Disabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>